--- a/TRAVEL COMPASS/frontend/package.json
+++ b/TRAVEL COMPASS/frontend/package.json
@@ -6,7 +6,7 @@
   "devDependencies": {},
   "scripts": {
     "start": "craco start",
-    "build": "craco build",
+    "build": "npx craco build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
